--- a/IBM Capstone Project.ipynb
+++ b/IBM Capstone Project.ipynb
@@ -18,32 +18,378 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hello, \n",
+    "###### Hello, \n",
     "\n",
-    "#### Welcome to my notebook, I will use this notebook to work on the applied data science capstone project."
+    " *Welcome to my notebook, I will use this notebook to work on the applied data science capstone project.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Introduction**\n",
+    "\n",
+    "<p1> The annual statistics report published by the Department of Motor Vehicles (DMV) in New York State revealed that there are 11,351,388 active vehicles registered as of 2018 (<https://dmv.ny.gov/statistic/2018reginforce-web.pdf>). Whereas, the 2018 United States Census Bureau reported New York City population of 8.399 million (<https://www.census.gov/quickfacts/newyorkcitynewyork>). As per the findings, it is safe to determine that New York City is one of the most dense cities in the US with a great number of drivers ranging from young to old. \n",
+    "<p>Among the various driving population within NYC, one important group of drivers is of the NYPD (New York City Police Department). NYPD is always on the streets and they often have a good reason to speed and bend few DMV rules to maintain order. The purpose of this study is to examine the data of NYPD accidents. By using various algorithims, a determination can be made to show the severity of the accidents and its causation. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Data**\n",
+    "\n",
+    "The Data used in this study is obtained from Kaggle. This data reports NYPD accidents from years 2012-2017. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello Capstone Project Course!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Libraries\n",
     "\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "print(\"Hello Capstone Project Course!\")"
+    "import numpy as np"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/COLLEGE/opt/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3063: DtypeWarning: Columns (3) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Data\n",
+    "\n",
+    "nypd= pd.read_csv(\"NYPD_Motor_Vehicle_Collisions.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>TIME</th>\n",
+       "      <th>BOROUGH</th>\n",
+       "      <th>ZIP CODE</th>\n",
+       "      <th>LATITUDE</th>\n",
+       "      <th>LONGITUDE</th>\n",
+       "      <th>LOCATION</th>\n",
+       "      <th>ON STREET NAME</th>\n",
+       "      <th>CROSS STREET NAME</th>\n",
+       "      <th>OFF STREET NAME</th>\n",
+       "      <th>...</th>\n",
+       "      <th>CONTRIBUTING FACTOR VEHICLE 2</th>\n",
+       "      <th>CONTRIBUTING FACTOR VEHICLE 3</th>\n",
+       "      <th>CONTRIBUTING FACTOR VEHICLE 4</th>\n",
+       "      <th>CONTRIBUTING FACTOR VEHICLE 5</th>\n",
+       "      <th>UNIQUE KEY</th>\n",
+       "      <th>VEHICLE TYPE CODE 1</th>\n",
+       "      <th>VEHICLE TYPE CODE 2</th>\n",
+       "      <th>VEHICLE TYPE CODE 3</th>\n",
+       "      <th>VEHICLE TYPE CODE 4</th>\n",
+       "      <th>VEHICLE TYPE CODE 5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>08/04/2017</td>\n",
+       "      <td>0:00</td>\n",
+       "      <td>QUEENS</td>\n",
+       "      <td>11436</td>\n",
+       "      <td>40.666885</td>\n",
+       "      <td>-73.790405</td>\n",
+       "      <td>(40.666885, -73.790405)</td>\n",
+       "      <td>NORTH CONDUIT AVENUE</td>\n",
+       "      <td>149 STREET</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Unspecified</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3725017</td>\n",
+       "      <td>PASSENGER VEHICLE</td>\n",
+       "      <td>PASSENGER VEHICLE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>08/04/2017</td>\n",
+       "      <td>0:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>40.719950</td>\n",
+       "      <td>-74.008590</td>\n",
+       "      <td>(40.71995, -74.00859)</td>\n",
+       "      <td>HUDSON STREET</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Unsafe Lane Changing</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3725047</td>\n",
+       "      <td>PICK-UP TRUCK</td>\n",
+       "      <td>SPORT UTILITY / STATION WAGON</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>08/04/2017</td>\n",
+       "      <td>0:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>40.718666</td>\n",
+       "      <td>-73.963500</td>\n",
+       "      <td>(40.718666, -73.9635)</td>\n",
+       "      <td>KENT AVENUE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Following Too Closely</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3725533</td>\n",
+       "      <td>SPORT UTILITY / STATION WAGON</td>\n",
+       "      <td>PASSENGER VEHICLE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>08/04/2017</td>\n",
+       "      <td>0:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>40.754677</td>\n",
+       "      <td>-73.975815</td>\n",
+       "      <td>(40.754677, -73.975815)</td>\n",
+       "      <td>PARK AVENUE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Unspecified</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3724870</td>\n",
+       "      <td>SPORT UTILITY / STATION WAGON</td>\n",
+       "      <td>TAXI</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>08/04/2017</td>\n",
+       "      <td>0:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>40.818314</td>\n",
+       "      <td>-73.836000</td>\n",
+       "      <td>(40.818314, -73.836)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Unspecified</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3725662</td>\n",
+       "      <td>PASSENGER VEHICLE</td>\n",
+       "      <td>PASSENGER VEHICLE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 29 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         DATE  TIME BOROUGH ZIP CODE   LATITUDE  LONGITUDE  \\\n",
+       "0  08/04/2017  0:00  QUEENS    11436  40.666885 -73.790405   \n",
+       "1  08/04/2017  0:00     NaN      NaN  40.719950 -74.008590   \n",
+       "2  08/04/2017  0:00     NaN      NaN  40.718666 -73.963500   \n",
+       "3  08/04/2017  0:00     NaN      NaN  40.754677 -73.975815   \n",
+       "4  08/04/2017  0:00     NaN      NaN  40.818314 -73.836000   \n",
+       "\n",
+       "                  LOCATION                    ON STREET NAME  \\\n",
+       "0  (40.666885, -73.790405)  NORTH CONDUIT AVENUE               \n",
+       "1    (40.71995, -74.00859)  HUDSON STREET                      \n",
+       "2    (40.718666, -73.9635)  KENT AVENUE                        \n",
+       "3  (40.754677, -73.975815)  PARK AVENUE                        \n",
+       "4     (40.818314, -73.836)                               NaN   \n",
+       "\n",
+       "  CROSS STREET NAME OFF STREET NAME  ...  CONTRIBUTING FACTOR VEHICLE 2  \\\n",
+       "0        149 STREET             NaN  ...                    Unspecified   \n",
+       "1               NaN             NaN  ...           Unsafe Lane Changing   \n",
+       "2               NaN             NaN  ...          Following Too Closely   \n",
+       "3               NaN             NaN  ...                    Unspecified   \n",
+       "4               NaN             NaN  ...                    Unspecified   \n",
+       "\n",
+       "   CONTRIBUTING FACTOR VEHICLE 3  CONTRIBUTING FACTOR VEHICLE 4  \\\n",
+       "0                            NaN                            NaN   \n",
+       "1                            NaN                            NaN   \n",
+       "2                            NaN                            NaN   \n",
+       "3                            NaN                            NaN   \n",
+       "4                            NaN                            NaN   \n",
+       "\n",
+       "   CONTRIBUTING FACTOR VEHICLE 5  UNIQUE KEY            VEHICLE TYPE CODE 1  \\\n",
+       "0                            NaN     3725017              PASSENGER VEHICLE   \n",
+       "1                            NaN     3725047                  PICK-UP TRUCK   \n",
+       "2                            NaN     3725533  SPORT UTILITY / STATION WAGON   \n",
+       "3                            NaN     3724870  SPORT UTILITY / STATION WAGON   \n",
+       "4                            NaN     3725662              PASSENGER VEHICLE   \n",
+       "\n",
+       "             VEHICLE TYPE CODE 2  VEHICLE TYPE CODE 3 VEHICLE TYPE CODE 4  \\\n",
+       "0              PASSENGER VEHICLE                  NaN                 NaN   \n",
+       "1  SPORT UTILITY / STATION WAGON                  NaN                 NaN   \n",
+       "2              PASSENGER VEHICLE                  NaN                 NaN   \n",
+       "3                           TAXI                  NaN                 NaN   \n",
+       "4              PASSENGER VEHICLE                  NaN                 NaN   \n",
+       "\n",
+       "  VEHICLE TYPE CODE 5  \n",
+       "0                 NaN  \n",
+       "1                 NaN  \n",
+       "2                 NaN  \n",
+       "3                 NaN  \n",
+       "4                 NaN  \n",
+       "\n",
+       "[5 rows x 29 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Data Observation\n",
+    "nypd.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1089265, 29)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nypd.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['DATE', 'TIME', 'BOROUGH', 'ZIP CODE', 'LATITUDE', 'LONGITUDE',\n",
+       "       'LOCATION', 'ON STREET NAME', 'CROSS STREET NAME', 'OFF STREET NAME',\n",
+       "       'NUMBER OF PERSONS INJURED', 'NUMBER OF PERSONS KILLED',\n",
+       "       'NUMBER OF PEDESTRIANS INJURED', 'NUMBER OF PEDESTRIANS KILLED',\n",
+       "       'NUMBER OF CYCLIST INJURED', 'NUMBER OF CYCLIST KILLED',\n",
+       "       'NUMBER OF MOTORIST INJURED', 'NUMBER OF MOTORIST KILLED',\n",
+       "       'CONTRIBUTING FACTOR VEHICLE 1', 'CONTRIBUTING FACTOR VEHICLE 2',\n",
+       "       'CONTRIBUTING FACTOR VEHICLE 3', 'CONTRIBUTING FACTOR VEHICLE 4',\n",
+       "       'CONTRIBUTING FACTOR VEHICLE 5', 'UNIQUE KEY', 'VEHICLE TYPE CODE 1',\n",
+       "       'VEHICLE TYPE CODE 2', 'VEHICLE TYPE CODE 3', 'VEHICLE TYPE CODE 4',\n",
+       "       'VEHICLE TYPE CODE 5'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nypd.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['08/04/2017', '07/20/2017', '08/03/2017', ..., '07/04/2012',\n",
+       "       '07/02/2012', '07/01/2012'], dtype=object)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nypd['DATE'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
